Add explicit access log

--- a/squid.conf
+++ b/squid.conf
@@ -2,3 +2,5 @@ http_port 3128 accel allow-direct
 acl all src 0.0.0.0/0
 http_access allow all
 forwarded_for off
+
+access_log daemon:/var/log/squid/access.log squid
