--- a/squid.conf
+++ b/squid.conf
@@ -4,3 +4,5 @@ http_access allow all
 forwarded_for off
 
 access_log daemon:/var/log/squid/access.log squid
+icap_log daemon:/var/log/squid/icap.log squid
+cache_log /var/log/squid/cache.log
