--- a/squid.conf
+++ b/squid.conf
@@ -1,4 +1,5 @@
-http_port 3128 accel allow-direct
+http_port 80 accel allow-direct
+https_port 443 accel allow-direct
 acl all src 0.0.0.0/0
 http_access allow all
 forwarded_for off
