--- a/squid.conf
+++ b/squid.conf
@@ -1,5 +1,12 @@
+acl Safe_ports port 80 #http
+acl Safe_ports port 443 #https
+acl SSL_ports port 443
+acl SSL method CONNECT
+acl CONNECT method CONNECT
+
 http_port 80 accel allow-direct
 https_port 443 accel allow-direct
+
 acl all src 0.0.0.0/0
 http_access allow all
 forwarded_for off
