Add extra ssl methods

--- a/squid.conf
+++ b/squid.conf
@@ -4,6 +4,9 @@ acl SSL_ports port 443
 acl SSL method CONNECT
 acl CONNECT method CONNECT
 
+always_direct allow all
+ssl_bump allow all 
+
 http_port 80 accel allow-direct
 https_port 443 accel allow-direct
 
