--- a/squid.conf
+++ b/squid.conf
@@ -8,7 +8,7 @@ always_direct allow all
 ssl_bump allow all 
 
 http_port 80 accel allow-direct
-https_port 443 accel allow-direct
+http_port 443 intercept ssl-bump 
 
 acl all src 0.0.0.0/0
 http_access allow all
